[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
indicatif = "0.16"
anyhow = "*"
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3", default-features = false }
rand = "*"
tracing = "*"
tracing-subscriber = "*"
